--- a/style.css
+++ b/style.css
@@ -67,9 +67,80 @@ body {
 
 .slider {
   background-image: url("https://images.unsplash.com/photo-1604147495798-57beb5d6af73?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2370&q=80");
+  overflow: hidden;
 }
 .slider-Wrapper {
   display: flex;
-  align-items: center;
   width: 500vw;
+}
+.slider-Item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  padding: 4em;
+}
+.slider-img {
+  width: 40em;
+  height: auto;
+  z-index: 1;
+}
+
+.slider-Price {
+  position: absolute;
+  top: 14%;
+  left: 28%;
+  color: #ffffff;
+  font-weight: 300;
+  border: 1px solid rgb(165, 165, 165);
+  font-size: 3em;
+}
+.slider-Title {
+  position: absolute;
+  top: 25%;
+  right: 20%;
+  color: #ffffff;
+  text-align: center;
+  font-size: 4em;
+}
+.buy-button {
+  position: absolute;
+  top: 60%;
+  right: 23.8%;
+  color: #000;
+  background-color: #fff;
+  font-size: 2em;
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.buy-button:hover {
+  color: #fff;
+  background-color: #000;
+  transition: 0.5s ease-in-out;
+}
+
+.slider-Bg {
+  width: 45em;
+  height: 45em;
+  position: absolute;
+  border-radius: 50%;
+}
+
+.slider-Item:nth-child(1) .slider-Bg {
+  background-color: rgb(168, 0, 168);
+}
+.slider-Item:nth-child(2) .slider-Bg {
+  background-color: rgb(0, 39, 98);
+}
+.slider-Item:nth-child(3) .slider-Bg {
+  background-color: rgb(0, 98, 11);
+}
+.slider-Item:nth-child(4) .slider-Bg {
+  background-color: rgb(98, 47, 0);
+}
+.slider-Item:nth-child(5) .slider-Bg {
+  background-color: rgb(131, 126, 0);
 }
