--- a/style.css
+++ b/style.css
@@ -182,6 +182,8 @@ body {
 }
 
 .product {
+  height: 80vh;
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -255,23 +257,118 @@ body {
   margin-top: 5px;
 }
 
+/* Cart component */
+.cartSection {
+  position: absolute;
+  height: 90vh;
+  width: 70vw;
+  background-color: #e8e8e8;
+  z-index: 2;
+  border-radius: 10px;
+  box-shadow: 0px 5px 50px #232323a7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cartItems {
+  display: flex;
+
+  align-items: center;
+}
+
+.cartColumn {
+  font-size: 1.5em;
+  border-bottom: 1px solid black;
+  padding-bottom: 0.5em;
+  margin-right: 1em;
+}
+
 .gallery {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 5em;
+  padding: 4em 8em;
 }
 
 .galleryItem {
   flex: 1;
-  padding: 4em;
+  padding: 3em;
 }
 
 .galleryImg {
   width: 100%;
+  height: auto;
+  margin: 1em 0;
 }
 
 .galleryTitle {
-  font-size: 2em;
-  font-weight: 900;
+  font-size: 2.2em;
+  font-weight: 700;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  padding: 4em 6em 4em 6em;
+  background-color: #f5f5f5;
+}
+
+.leftFooter {
+  display: flex;
+  justify-content: space-around;
+  flex: 2;
+}
+
+.fMenuTitle {
+  font-size: 1.5em;
+}
+
+.fListItem {
+  list-style: none;
+  margin: 1em 0;
+  color: gray;
+  cursor: pointer;
+}
+
+.rightFooter {
+  flex: 1;
+  padding: 0 0 0 10em;
+}
+
+.newsletterMail {
+  margin: 1em 0;
+}
+
+.newsletterMailInput {
+  width: 15em;
+  height: 2.5em;
+  padding: 5px;
+}
+
+.newsletterMailBtn {
+  background-color: #000;
+  color: #fff;
+  padding: 0.5em;
+  font-size: 1em;
+  border: none;
+  cursor: pointer;
+}
+
+.followusTitle {
+  margin-top: 1em;
+}
+
+.socialLinkIcon {
+  width: 1.5em;
+  margin: 1em 0.5em;
+  cursor: pointer;
+}
+
+.socialLinkIcon:nth-child(1) {
+  margin-left: 0;
+}
+
+.copyright {
+  color: gray;
 }
