--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* global css styles */
+
 * {
   margin: 0;
   padding: 0;
@@ -11,6 +13,8 @@ html {
 body {
   font-family: "Lato", sans-serif;
 }
+
+/* nav component */
 
 .main-nav {
   background-color: #191919;
@@ -68,6 +72,8 @@ body {
   margin-right: 4em;
   cursor: pointer;
 }
+
+/* slider component */
 
 .slider {
   background-image: url("https://images.unsplash.com/photo-1604147495798-57beb5d6af73?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2370&q=80");
@@ -151,6 +157,8 @@ body {
   background-color: rgb(131, 126, 0);
 }
 
+/* features section component*/
+
 .features {
   display: flex;
   align-items: center;
@@ -180,6 +188,8 @@ body {
   font-size: 1.1em;
   max-width: 15em;
 }
+
+/* product section component */
 
 .product {
   height: 80vh;
@@ -258,21 +268,30 @@ body {
 }
 
 /* Cart component */
+
+.cartIcon {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 1.5em;
+  cursor: pointer;
+}
+
 .cartSection {
   position: absolute;
   height: 90vh;
-  width: 70vw;
+  width: 60vw;
   background-color: #e8e8e8;
   z-index: 2;
   border-radius: 10px;
   box-shadow: 0px 5px 50px #232323a7;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
 
-.cartSectionTitle {
+.cartSectionHeader {
   font-weight: bold;
   font-size: 2em;
   margin-bottom: 1em;
@@ -280,15 +299,111 @@ body {
 
 .cartRow {
   display: flex;
-  align-items: center;
 }
 
 .cartColumn {
-  font-size: 1.5em;
+  font-size: 1.2em;
   border-bottom: 1px solid black;
-  padding-bottom: 0.5em;
+  padding: 0.5em;
   margin-right: 1em;
+  display: flex;
+  align-items: center;
 }
+
+.cartRow:last-child .cartColumn {
+  border: none;
+}
+
+.cartRow:last-child {
+  border-bottom: 1px solid #000;
+}
+
+.cartHeader {
+  font-weight: 700;
+  font-size: 1.5em;
+}
+
+.cartItem {
+  width: 45%;
+}
+
+.cartPrice {
+  width: 20%;
+}
+
+.cartQuantity {
+  width: 25%;
+}
+
+.cartItemImg {
+  width: 5em;
+}
+
+.cartItemTitle {
+  margin-left: 0.6em;
+}
+
+.cartQuantityInput {
+  width: 3em;
+  height: 2em;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 0.7em;
+}
+
+.removeBtn {
+  margin: 1em;
+  padding: 0.5em;
+  background-color: #fe4f4f;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.removeBtn:hover {
+  background-color: #ba0000;
+}
+
+.cartTotal {
+  align-self: normal;
+  margin-left: 58%;
+  font-size: 1.5em;
+  margin-top: 0.5em;
+}
+
+.cartTotalTitle {
+  margin-right: 8px;
+}
+
+.purchaseBtn {
+  font-size: 2em;
+  padding: 0.6em 0.8em;
+  border-radius: 10px;
+  margin-top: 2em;
+  background-color: #f5f5f5;
+  cursor: pointer;
+}
+
+.purchaseBtn:hover {
+  background-color: gray;
+  color: #fff;
+}
+
+.closeCartBtn {
+  position: absolute;
+  font-size: 2em;
+  top: 0;
+  right: 8px;
+  cursor: pointer;
+  /* border: 1px solid black; */
+}
+
+.closeCartBtn:hover {
+  color: #ba0000;
+}
+
+/* gallery section component */
 
 .gallery {
   display: flex;
@@ -312,6 +427,8 @@ body {
   font-size: 2.2em;
   font-weight: 700;
 }
+
+/* footer component */
 
 .footer {
   display: flex;
